Creación de subcarpetas para una mejor organización

--- a/utp2021_progweb/semana 02/activ_s2_1.html
+++ b/utp2021_progweb/semana 02/activ_s2_1.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Actividad Lista Animales</title>
 </head>
 <body>
     <ul>
         <li>Carnívoro
-            <ul>
-                <li type=circle>León</li>
-                <li type=circle>Buitre</li>
-                <li type=circle>Hiena</li>
+            <ul type=circle>    <!--anidaminento-->
+                <li>León</li>
+                <li>Buitre</li>
+                <li>Hiena</li>
             </ul>
         </li>
         <li>Herbívoro
-            <ul>
-                <li type=circle>Cabra</li>
-                <li type=circle>Vaca</li>
+            <ul type=circle>
+                <li>Cabra</li>
+                <li>Vaca</li>
             </ul>
         </li>
         <li>Omnívoro
-            <ul>
-                <li type=circle>Oso</li>
-                <li type=circle>Urraca</li>
+            <ul type=circle>
+                <li>Oso</li>
+                <li>Urraca</li>
             </ul>
         </li>
     </ul>
