--- a/utp2021_progweb/semana 02/activ_s2_2.html
+++ b/utp2021_progweb/semana 02/activ_s2_2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Actividad Tabla</title>
 </head>
 <body>
     <h4>Comparativa de reproductores MP3</h4>
@@ -33,10 +33,10 @@
             </tr>
             <tr>
                 <td>Colores</td>
-                <td><img src="./img_gris.JPG" alt="Gris"></td>
-                <td><img src="./img_colores.JPG" alt="Varios"></td></td>
-                <td><img src="./img_plomo.JPG" alt="Plomo"></td></td>
-                <td colspan="2"><img src="./img_gp.JPG" alt="Gris y plomo"></td></td>
+                <td><img src="imagenes/img_gris.JPG" height="60px" alt="Gris"></td>
+                <td><img src="imagenes/img_colores.JPG" height="60px" alt="Varios"></td></td>
+                <td><img src="imagenes/img_plomo.JPG" height="60px" alt="Plomo"></td></td>
+                <td colspan="2"><img src="imagenes/img_gp.JPG" height="60px" alt="Gris y plomo"></td></td>
             </tr>
             <tr>
                 <td>Pantalla</td>
