--- a/utp2021_progweb/index.html
+++ b/utp2021_progweb/index.html
@@ -8,5 +8,26 @@
 </head>
 <body>
     <h1>Universidad</h1>
+
+    <!---->
+    <h2>Actividades</h2>
+    <ul>
+        <li>Semana 01
+            <ul>
+                <li><a href="semana 01/tarea_1.html">Tarea 1</a></li>
+            </ul>
+        </li>
+        <li>Semana 02
+            <ul>
+                <li><a href="semana 02/activ_s2_1.html">Lista animales</a></li>
+                <li><a href="semana 02/activ_s2_2.html">Tabla MP3</a></li>
+            </ul>
+        </li>
+        <li>Semana 03
+            <ul>
+                <li><a href="semana 03/index.html">Actv</a></li>
+            </ul>
+        </li>
+    </ul>
 </body>
 </html>
