--- a/utp2021_progweb/semana 02/activ_s2_2.html
+++ b/utp2021_progweb/semana 02/activ_s2_2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividad Tabla</title>
+    <title>Actividad Tabla MP3</title>
 </head>
 <body>
     <h4>Comparativa de reproductores MP3</h4>
