Actualización Actividad Semana 3

--- a/utp2021_progweb/index.html
+++ b/utp2021_progweb/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Universidad</h1>
 
-    <!---->
+    <!-- ÍNDICE DE ACTIVIDADES -->
     <h2>Actividades</h2>
     <ul>
         <li>Semana 01
@@ -25,7 +25,7 @@
         </li>
         <li>Semana 03
             <ul>
-                <li><a href="semana 03/index.html">Actv</a></li>
+                <li><a href="semana 03/index.html">Bill Gates</a></li>
             </ul>
         </li>
     </ul>
