--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <ul>
         <li>Semana 01
             <ul>
-                <li><a href="semana 01/tarea_1.html">Tarea 1</a></li>
+                <li><a href="utp2021_progweb/semana 01/tarea_1.html">Tarea 1</a></li>
             </ul>
         </li>
         <li>Semana 02
             <ul>
-                <li><a href="semana 02/activ_s2_1.html">Lista animales</a></li>
-                <li><a href="semana 02/activ_s2_2.html">Tabla MP3</a></li>
+                <li><a href="utp2021_progweb/semana 02/activ_s2_1.html">Lista animales</a></li>
+                <li><a href="utp2021_progweb/semana 02/activ_s2_2.html">Tabla MP3</a></li>
             </ul>
         </li>
         <li>Semana 03
             <ul>
-                <li><a href="semana 03/index.html">Bill Gates</a></li>
+                <li><a href="utp2021_progweb/semana 03/index.html">Bill Gates</a></li>
             </ul>
         </li>
     </ul>
